# CodeMonkeys

./: .gitignore  CLAUDE.md  Dockerfile  FLEET.md  GEMINI.md  GOVERNANCE.md  OFFICE_HOURS.md  README.md  SECURITY.md  START_HERE.md  WAVES.md  banana_shelter.py  change_forge.py  cline_proxy.py  codemonkeys_cli.py  config_manager.py  deploy_linux.sh  feedback_engine.py  feedback_triage.py  fly.toml  forge_ui.py  gemini_integration.py  github_bridge.py  openrouter_bridge.py  proxy_config.py  proxy_providers_gemini_anthropic.py  proxy_providers_openrouter.py  proxy_router.py  proxy_streaming.py  queue_manager.py  requirements-desktop.txt  requirements.txt  server.py  settings_server.py  tailwind.config.js  test_good_monkeys.py
.codemonkeys/: blackboard-change-forge.md  blackboard-code-monkeys-features.md  blackboard-github-integration.md
.githooks/: brand-wordlist.txt
cli/: README.md  __main__.py  client.py  config.py  pyproject.toml  repl.py
cli/tests/: test_client.py
corps/: AGENT_DOCTRINE.md  CORPS_COMMANDER.md  CORPS_MODEL_TIERS.md  CORPS_PLAYBOOKS.md  CORPS_TREASURY.md  CORPS_VENDOR.txt  FLEET_PROTOCOL.md  agent-governance.md
desktop/: __init__.py  __main__.py  codemonkeys.desktop  codemonkeys.spec  installer.nsi  launcher.py  pyi_rth_codemonkeys.py
docs/: ANTIGRAVITY_BACKLOG.md  ARCHITECTURE.md  CLAUDE.md  CODE_GREMLINS.md  COMMERCIAL.md  DEPENDENCY_AUDIT.md  DESKTOP.md  FORGE.md  FORGE_HYGIENE.md  IDEATION.md  README.md  RECOVERY.md  RELEASE_NOTES.md  RUNBOOK.md  SETUP.md  STATE.md  TERMINAL_DESIGN.md  VERTEX_GCP_CREDITS.md
fleet/: HANDOFF.md  (+3 more)
(+214 files in other folders)
