[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codemonkeys-cli"
version = "0.1.1"
description = "Terminal REPL client for CodeMonkeys — a Cline/Claude-Code-style terminal, pointed at your own server."
requires-python = ">=3.10"
dependencies = [
    "requests==2.34.2",
    "rich==14.2.0",
]

[project.scripts]
codemonkeys = "cli.__main__:main"
cm = "cli.__main__:main"

[tool.setuptools]
packages = ["cli"]
package-dir = { cli = "." }
